--- a/features.yaml
+++ b/features.yaml
@@ -106,3 +106,12 @@
   discovered_from: null
   spec_file: docs/history/20260131_cmd-003_features_yaml.md
   created_at: '2026-01-31'
+- id: pv-008
+  epic: pv
+  status: done
+  title: Activity Dashboard View
+  description: "Add portfolio-wide activity view showing completion velocity: GitHub-style heatmap calendar, bar chart, and comprehensive stats. Access via 'a' key from portfolio view."
+  depends_on: []
+  created_at: '2026-02-03'
+  spec_file: docs/history/20260203_pv-008_activity_dashboard.md
+  completed_at: "2026-02-03"
