Migrate workflow system to skills-first architecture.
- Add focused skills for all command workflows plus shared helper scripts.
- Add minimal frontmatter specification and align skill headers to required fields.
- Update sync and documentation to distribute and describe skills-first usage.
- Record migration plan execution and mark cmd-004 complete in features.yaml.

--- a/features.yaml
+++ b/features.yaml
@@ -126,3 +126,14 @@
   created_at: "2026-02-07"
   completed_at: "2026-02-07"
   spec_file: docs/history/20260207_pv-009_stacked_bar_epic.md
+- id: cmd-004
+  epic: cmd
+  status: done
+  title: Migrate custom commands to skills with cross-provider frontmatter
+  description: Design and execute migration from command-first prompts to skill-first workflows, with a frontmatter spec compatible across Claude/Codex/Cursor while preserving Claude-first behavior.
+  priority: 1
+  depends_on: []
+  discovered_from: null
+  spec_file: docs/plans/cmd-004.md
+  created_at: "2026-02-13"
+  completed_at: "2026-02-13"
